# Postavleno_Bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py
.github/workflows/: ci.yml
scripts/: smtp_check.py
src/postavleno_bot/: __init__.py  app.py  main.py  navigation.py
src/postavleno_bot/core/: config.py  crypto.py  logging.py
src/postavleno_bot/db/: __init__.py  engine.py  models.py  repo.py
src/postavleno_bot/domain/: __init__.py  validators.py
src/postavleno_bot/handlers/: __init__.py  auth_menu.py  cb_help_ok.py  cmd_help.py  company.py  email.py  fallback.py  help.py  home.py  login.py  menu.py  navigation.py  pages.py  profile.py  register.py  utils.py  wb.py
src/postavleno_bot/help/: steps.py
src/postavleno_bot/integrations/: __init__.py  moysklad.py  wb_client.py  wildberries.py
src/postavleno_bot/keyboards/: common.py
src/postavleno_bot/middlewares/: request_id.py  user_context.py
src/postavleno_bot/repositories/: __init__.py  accounts_fs.py
src/postavleno_bot/services/: __init__.py  accounts.py  email_verification.py  export.py  exports.py  local.py  sessions.py  stocks.py  store_stock_merge.py  users.py  wb_cache.py  wb_export.py
src/postavleno_bot/start/: ability_registry.py
src/postavleno_bot/state/: __init__.py  forms.py  session.py
src/postavleno_bot/ui/: __init__.py  card.py  keyboards.py  texts.py
src/postavleno_bot/utils/: __init__.py  email_sender.py  excel.py  formatting.py  http.py  safe_telegram.py  strings.py
tests/: conftest.py  test_accounts.py  test_auth_flow.py  test_crypto.py  test_email_sender_tls.py  test_email_verification_flow.py  test_export.py  test_formatting.py  test_help.py  test_help_handler.py  test_http_client.py  test_keyboard_inline.py  test_keyboards.py  test_keyboards_order.py  test_local_merge_to_wb.py  test_local_processing.py  test_logging_reserved.py  test_mask.py  test_merge_from_wb.py  test_merge_store_stock.py  test_middlewares.py  test_moysklad_by_wb.py  test_moysklad_integration.py  test_ms_headers.py  test_navigation.py  test_navigation_history.py  test_paging.py  test_profile_menu.py  test_start_message.py  test_stocks_ui.py  test_texts.py  test_upload_delete_policy.py  test_upload_flow.py  test_validators.py  test_wb_transform.py
tools/win/: bootstrap.ps1  tasks.ps1
