[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "postavleno-bot"
version = "0.1.0"
description = "Postavleno Bot: authorization and profile management"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Postavleno Team"}]
dependencies = [
    "aiogram>=3.4,<4.0",
    "structlog>=24.1,<25.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "rich>=13.8,<14.0",
    "orjson>=3.10,<4.0",
    "httpx>=0.27,<0.28",
    "SQLAlchemy>=2.0",
    "aiosqlite>=0.19",
    "cryptography>=42.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
no_implicit_optional = true
show_error_codes = true
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
plugins = []

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cryptography"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
